k8s/deployments/python-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: testing
  labels:
    app.kubernetes.io/name: python-app
    app.kubernetes.io/instance: python-app
    app.kubernetes.io/version: "1.0"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: python-app
    app.kubernetes.io/instance: python-app
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: http
