k8s/deployments/python-app/test-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: python-app
    app.kubernetes.io/name: python-app
  name: python-app-svc
  namespace: testing
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: python-app
    app.kubernetes.io/name: python-app
  type: ClusterIP
