k8s/deployments/python-app/test-networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: python-app
    app.kubernetes.io/name: python-app
  name: python-app-networkpolicy
  namespace: testing
spec:
  ingress:
  - ports:
    - port: 5000
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: python-app
      app.kubernetes.io/name: python-app
